- Improve mockup section - Replace title of header background
- Improve mockup section
- Replace title of header background

--- a/Artywiz/animez-la-communication-district.html
+++ b/Artywiz/animez-la-communication-district.html
@@ -1,4 +1,4 @@
-<!-- Email object : Animez LA communication de votre club -->
+<!-- Email object :  Animez les communautés de votre club et de vos équipes! -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="light">
   <meta name="supported-color-schemes" content="light">
-  <title>Animez LA communication de votre club</title>
+  <title> Animez les communautés de votre club et de vos équipes!</title>
   <style type="text/css">
 .ReadMsgBody { width: 100%; background-color: #ffffff; }
 .ExternalClass { width: 100%; background-color: #ffffff; }
@@ -120,7 +120,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Ubuntu; font-size:26px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 30px; margin-top: 18px; margin-bottom: 0;">Animez LA communication <br>de votre club</p>
+                                                <p align="center" style="line-height: 30px; margin-top: 18px; margin-bottom: 0;"> Animez les communautés <br>de votre club et de vos équipes!</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -175,7 +175,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628146704/email/animez-la-communication/illustration.png" width="272" style="display:block; line-height:0px; font-size:0px; border:0px; width: 272px;" editable label="image" />
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628146704/email/animez-la-communication/illustration.png" width="289" style="display:block; line-height:0px; font-size:0px; border:0px; width: 289px;" editable label="image" />
                                         </td>
                                     </tr>
                                     <!--end img-->
@@ -217,7 +217,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family: Roboto; font-size: 13px; color:#979797; line-height:20px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 20px; margin: 0;">
-                                                    Importez automatiquement les informations du matchs si vous aviez fait une annonce, saisissez le score, les buteurs, puis choisissez les sponsors… ARTYWIZ va automatiquement créer pour vous une série de documents prêts à être publiés sur les réseaux sociaux, imprimés ou envoyés par mails… <br><br>
+                                                    Importez automatiquement les informations du matchs si vous aviez fait une annonce, saisissez le score, les buteurs, puis choisissez les sponsors… <br>ARTYWIZ va automatiquement créer pour vous une série de documents prêts à être publiés sur les réseaux sociaux, imprimés ou envoyés par mails… <br><br>
 
                                                     Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
                                                 </p>
@@ -367,6 +367,55 @@ u + .body .full { width:100% !important; width:100vw !important;}
         </table>
     </module>
     <!--end 2/2 panel-->
+
+    <!--1/1 icons-->
+    <module label="1/1 icons" auto>
+        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td align="center" bgcolor="#F7F7F7">
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td>
+                                <!-- left -->
+                                <table width="600" class="table-full" align="left" border="0" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--icon-->
+                                    <tr>
+                                        <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628152486/email/animez-la-communication/Concours-photos-Image-district.png" alt=""
+                                                width="100%"
+                                                style="display:block;line-height:0px; font-size:0px; border:0px;"
+                                                editable label="image" />
+                                        </td>
+                                    </tr>
+                                    <!--end icon-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr>
+                                        <td align="center"
+                                            style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
+                                            <single label="title">
+                                                CONCOURS PHOTOS - IMAGE
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                </table>
+                                <!-- end left -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="30"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end 1/1 icons-->
     
     <!--2/2 panel-->
     <module label="2/2 Panel" auto>
@@ -378,39 +427,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                         <tr>
                             <td>
                                 <!--left-->
-                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628152486/email/animez-la-communication/Concours-photos-Image-district.png" alt="" width="183"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
-                                                editable label="image" /></td>
-                                    </tr>
-                                    <!--end img-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr align="center">
-                                        <td
-                                            style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
-                                            <single label="title">
-                                                Concours photos - Image
-                                            </single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                </table>
-                                <!--end left-->
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="10" align="left" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td height="20"></td>
-                                    </tr>
-                                </table>
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <!--right-->
                                 <table width="295" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
@@ -435,11 +451,173 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                     <!--end title-->
                                 </table>
+                                <!--end left-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="10" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <!--right-->
+                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;"><img
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628240106/email/animez-la-communication/Questions-a-district.png" alt="" width="183"
+                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
+                                                editable label="image" /></td>
+                                    </tr>
+                                    <!--end img-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr align="center">
+                                        <td
+                                            style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
+                                            <single label="title">
+                                                QUESTIONS À
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                </table>
                                 <!--end right-->
                             </td>
                         </tr>
                         <tr>
                             <td height="50"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end 2/2 panel-->
+
+    <!--1/1 icons-->
+    <module label="1/1 icons" auto>
+        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td align="center" bgcolor="#F7F7F7">
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td>
+                                <!-- left -->
+                                <table width="600" class="table-full" align="left" border="0" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--icon-->
+                                    <tr>
+                                        <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628240113/email/animez-la-communication/limage-du-jour-district.png" alt=""
+                                                width="100%"
+                                                style="display:block;line-height:0px; font-size:0px; border:0px;"
+                                                editable label="image" />
+                                        </td>
+                                    </tr>
+                                    <!--end icon-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr>
+                                        <td align="center"
+                                            style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
+                                            <single label="title">
+                                                L'IMAGE DU JOUR
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                </table>
+                                <!-- end left -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="30"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end 1/1 icons-->
+
+    <!--2/2 panel-->
+    <module label="2/2 Panel" auto>
+        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td align="center">
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td>
+                                <!--left-->
+                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;"><img
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628240117/email/animez-la-communication/TRANSFERT-district.png" alt="" width="183"
+                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
+                                                editable label="image" /></td>
+                                    </tr>
+                                    <!--end img-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr align="center">
+                                        <td
+                                            style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
+                                            <single label="title">
+                                                TRANSFERT
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                </table>
+                                <!--end left-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="10" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <!--right-->
+                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;"><img
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628240123/email/animez-la-communication/Concours-photos-couverture-district.png" alt="" width="183"
+                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
+                                                editable label="image" /></td>
+                                    </tr>
+                                    <!--end img-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr align="center">
+                                        <td
+                                            style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
+                                            <single label="title">
+                                                CONCOURS PHOTOS - COUVERTURE
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                </table>
+                                <!--end right-->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="30"></td>
                         </tr>
                     </table>
                 </td>
