--- a/Artywiz/animez-la-communication.html
+++ b/Artywiz/animez-la-communication.html
@@ -175,7 +175,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628146704/email/animez-la-communication/illustration.png" width="289" style="display:block; line-height:0px; font-size:0px; border:0px; width: 289px;" editable label="image" />
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628146704/email/animez-la-communication/illustration.png" width="210" style="display:block; line-height:0px; font-size:0px; border:0px; width: 210px;" editable label="image" />
                                         </td>
                                     </tr>
                                     <!--end img-->
@@ -202,7 +202,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family: Roboto; font-size: 23px; color:#4A4A4A; text-transform: uppercase; font-weight: bold;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 27px; margin: 0;">
-                                                    découvrez comment <br>communiquer <br>simplement les <br>résultats des matchs <br>de vos équipes
+                                                    Faites vivre votre club sur les réseaux sociaux!
                                                 </p>
                                             </multi>
                                         </td>
@@ -217,9 +217,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family: Roboto; font-size: 13px; color:#979797; line-height:20px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 20px; margin: 0;">
-                                                    Importez automatiquement les informations du matchs si vous aviez fait une annonce, saisissez le score, les buteurs, puis choisissez les sponsors… <br>ARTYWIZ va automatiquement créer pour vous une série de documents prêts à être publiés sur les réseaux sociaux, imprimés ou envoyés par mails… <br><br>
-
-                                                    Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
+                                                    Votre club et vos équipes sont riches d’histoires à raconter, partagez-les avec votre communauté! <br>
+                                                    Mettez vos licenciés et bénévoles en valeur, souhaitez leurs anniversaires, organisez des quizz et créez de l’interaction en ligne… Artywiz vous propose toute une série de modèles de documents prêts à l’emploi, pour vous rendre la communication facile.
                                                 </p>
                                             </multi>
                                         </td>
