Replace mockup and label in appliquez les mesures email
Replace mockup and label in appliquez les mesures email

--- a/Artywiz/appliquez-les-mesures-district.html
+++ b/Artywiz/appliquez-les-mesures-district.html
@@ -254,7 +254,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628141798/email/appliquez-les-mesures/Masque-obligatoire-district.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1630029649/email/appliquez-les-mesures/PASS-SANITAIRE-district.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -269,7 +269,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td align="center"
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Masque obligatoire
+                                                PASS SANITAIRE
                                             </single>
                                         </td>
                                     </tr>
@@ -303,7 +303,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628072295/email/appliquez-les-mesures/Lavage-des-mains-district.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1629879893/email/appliquez-les-mesures/Lavage-des-mains-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -336,7 +336,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628141807/email/appliquez-les-mesures/Acc%C3%A8s-et-d%C3%A9sinfection-district.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1629879846/email/appliquez-les-mesures/Acc%C3%A8s-et-d%C3%A9sinfection-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -383,7 +383,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628141824/email/appliquez-les-mesures/Portez-un-masque-district.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1629879851/email/appliquez-les-mesures/Masque-obligatoire-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -396,7 +396,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
                                             <single label="title">
-                                                Portez un masque
+                                                Masque obligatoire
                                             </single>
                                         </td>
                                     </tr>
@@ -416,7 +416,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1628141830/email/appliquez-les-mesures/Acc%C3%A9s-au-Club-House-district.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1629879866/email/appliquez-les-mesures/Acc%C3%A9s-au-Club-House-district.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -447,6 +447,55 @@ u + .body .full { width:100% !important; width:100vw !important;}
         </table>
     </module>
     <!--end 2/2 panel-->
+
+    <!--1/1 icons-->
+    <module label="1/1 icons" auto>
+        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td align="center" bgcolor="#F7F7F7">
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td>
+                                <!-- left -->
+                                <table width="600" class="table-full" align="left" border="0" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--icon-->
+                                    <tr>
+                                        <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1630030975/email/appliquez-les-mesures/qr-code-district.png" alt=""
+                                                width="100%"
+                                                style="display:block;line-height:0px; font-size:0px; border:0px;"
+                                                editable label="image" />
+                                        </td>
+                                    </tr>
+                                    <!--end icon-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr>
+                                        <td align="center"
+                                            style="font-family: Roboto; font-size:18px; line-height: 21px; color:#3E586B; font-weight: bold; text-transform: uppercase;">
+                                            <single label="title">
+                                                QR Code Tous Anti Covid Stades
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                </table>
+                                <!-- end left -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="30"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end 1/1 icons-->
 
     <module label="CTA" auto>
         <table class="full" align="center" bgcolor="#FFFFFF" width="100%" border="0" cellspacing="0" cellpadding="0">
