Improve email appliquez
Improve email appliquez

--- a/Artywiz/appliquez-les-mesures-district.html
+++ b/Artywiz/appliquez-les-mesures-district.html
@@ -1,4 +1,4 @@
-<!-- Email object : appliquez les mesures sanitaires au sein de votre club! -->
+<!-- Email object : Développez la communication de votre club avec ARTYWIZ Football! -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -217,8 +217,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family: Roboto; font-size: 13px; color:#979797; line-height:20px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 20px; margin: 0;">
-                                                    Pour accompagner la mise en place des mesures sanitaires au sein de votre club, nous vous avons préparé toute une série de documents prêts à l’emploi et personnalisables, que vous pourrez télécharger et communiquer par tous les moyens au sein de votre club : Affichage, emails, bannière web, publication pour les réseaux sociaux... <br><br>
-                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter ou le lavage des mains, réalisez l’ensemble des documents indispensables, à l’image de votre club et en quelques minutes chrono! <br>
+                                                    Pour accompagner la mise en place des mesures sanitaires au sein de votre club, nous vous avons préparé toute une série de documents prêts à l’emploi et personnalisables, que vous pourrez télécharger et communiquer par tous les moyens au sein de votre club : Affichage, emails, bannière web, publication pour les réseaux sociaux... <br><br>
+                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter ou le passe sanitaire, réalisez l’ensemble des supports de communication indispensables, à l’image de votre club et en quelques minutes chrono! <br>
                                                     Et comme pour l’ensemble des documents réalisés sur Artywiz, vous pourrez également valoriser vos sponsors…
                                                 </p>
                                             </multi>
@@ -254,7 +254,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1630029649/email/appliquez-les-mesures/PASS-SANITAIRE-district.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1630485412/email/appliquez-les-mesures/PASS-SANITAIRE-district.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -1197,16 +1197,14 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                 <table width="290" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;">
-                                            <a href="https://www.creditmutuel.fr/" target="_blank">
-                                                <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/credit-mutuel-large.png" alt="" width="120"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:120px;"
-                                                    editable label="image" />
-                                            </a>
-                                        </td>
-                                    </tr>
+                                    <td align="center" style="line-height:0px;">
+                                        <a href="https://artywiz.io/" target="_blank">
+                                            <img
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1630485040/email/appliquez-les-mesures/artywiz-sponsor.png" alt="" width="110"
+                                                style="display:block; line-height:0px; font-size:0px; border:0px; width: 110px;"
+                                                editable label="image" />
+                                        </a>
+                                    </td>
                                     <!--end img-->
                                 </table>
                                 <!--end left-->
@@ -1223,10 +1221,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.colruyt.fr" target="_blank">
+                                            <a href="https://lgef.fff.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/colruyt-large.png" alt="" width="120"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width: 120px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1630485602/email/appliquez-les-mesures/district-sponsor.png" alt="" width="65"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width: 65px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
